- Added bindto socket context option. (Ilia)
- Rewrote strtotime() with support for timezones and tons of new formats.
  (Derick)
- Fixed PDO shutdown problem (possible inifite loop running rollback on
  shutdown). (Wez)
- Fixed PECL bug #3714 (beginTransaction doesn't work if you're in
  auto-commit mode). (Wez)
- Fixed bug #33340 (CLI Crash when calling php:function from XSLT). (Rob)
- Fixed bug #33312 (ReflectionParameter methods do not work correctly).
  (Dmitry)
- Fixed bug #33212 ([GCC 4]: 'zend_error_noreturn' aliased to external symbol
  'zend_error'). (Dmitry)
- Fixed bug #31256 (PHP_EVAL_LIBLINE configure macro does not handle -pthread).
  (Jani)
- Fixed bug #28355 (glob wont error if dir is not readable). (Hartmut)

10 Jun 2005, PHP 5.1 Beta 1
- Upgraded PCRE library to version 5.0. (Andrei)
- Removed php_check_syntax() function which never worked properly. (Ilia)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Moved extensions to PECL:
  . ext/cpdf        (Tony, Derick)
  . ext/dio         (Jani, Derick)
  . ext/fam         (Jani, Derick)
  . ext/ingres_ii   (Jani, Derick)
  . ext/mnogosearch (Jani, Derick)
  . ext/w32api      (Jani, Derick)
  . ext/yp          (Jani, Derick)
- Changed sha1_file() and md5_file() functions to use streams instead of
  low level IO. (Uwe)
- Changed abstract private methods to be not allowed anymore. (Stas)
- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
- Changed mysqli_exception and sqlite_exception to use RuntimeException as base 
  if SPL extension is present. (Georg, Marcus)
- Improved interactive mode of PHP CLI (php -a). (Johannes, Marcus)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch() statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)